# ojssast

./: .gitignore  README.md  pyproject.toml
deploy/: README.md  gunicorn.conf.py  nginx-ojs-sast.conf.example
deploy/systemd/: ojs-sast-api.service  ojs-sast-worker@.service
ojs_sast/: __init__.py  cli.py  constants.py  models.py  orchestrator.py
ojs_sast/agent/: __init__.py  bundle_builder.py  cli.py  client.py  config_collector.py  manifest.py  snapshot.py
ojs_sast/detectors/: __init__.py  config_scanner.py  cve_scanner.py  source_scanner.py  upload_manifest_scanner.py  upload_scanner.py
ojs_sast/helpers/: __init__.py  path_utils.py  php_utils.py  rule_applicability.py  smarty_utils.py  snippet_utils.py  version_utils.py
ojs_sast/models/: __init__.py  bundle.py  finding.py  report.py
ojs_sast/reporters/: __init__.py  html_reporter.py  json_reporter.py  sarif_reporter.py
ojs_sast/reporters/templates/: report.html.j2
ojs_sast/ruleset/: __init__.py  config_rules.yaml  cve_rules.yaml  loader.py  source_rules.yaml  upload_rules.yaml
ojs_sast/service/: __init__.py  app.py  asgi.py  auth.py  cli.py  config.py  extract.py  queue.py  storage.py  worker.py
ojs_sast/utils/: __init__.py  logger.py
scripts/: evaluate_sast.py
tests/: conftest.py  test_bundle_roundtrip.py  test_config_scan_payload.py  test_config_scanner.py  test_cve_deserialization.py  test_cve_regression.py  test_cve_smarty_xss.py  test_evaluate_sast.py  test_evaluate_version_aware.py  test_finding_metadata.py  test_multi_alternative_scope.py  test_orchestrator.py  test_renamed_ruleset_and_engine_fixes.py  test_reporters.py  test_rule_applicability.py  test_ruleset.py  test_ruleset_ground_truth_alignment.py  test_safe_extract.py  test_service_asgi.py  test_service_integration.py  test_service_persistent_queue.py  test_service_requirements.py  test_service_worker.py  test_service_worker_pool.py  test_snippet_utils.py  test_source_scanner.py  test_upload_manifest_builder.py  test_upload_manifest_scanner.py  test_upload_scanner.py  test_version_utils.py
tests/fixtures/config/: hardened_config.inc.php  insecure_config.inc.php  nginx_hardened.conf  nginx_insecure.conf
tests/fixtures/ojs_cve_p1/: config.inc.php
tests/fixtures/ojs_cve_p1/classes/statistics/: PKPStatisticsHelper.inc.php
tests/fixtures/ojs_cve_p1/pages/manager/: PKPToolsHandler.inc.php
tests/fixtures/ojs_cve_p1/templates/frontend/pages/: search.tpl  submissions.tpl
tests/fixtures/ojs_cve_p1/templates/search/: search.tpl
tests/fixtures/ojs_cve_p1_realistic/templates/frontend/pages/: search.tpl
tests/fixtures/templates/: unescaped.tpl
tests/fixtures/upload/clean/: readme.txt
tests/fixtures/upload/malicious/: shell.php
tests/fixtures/vulnerable_php/: sqli_sample.php  widget.js  xss_sample.php
